@@ -45,7 +45,7 @@ class MovableObjectRenderer
     void setCameraDistance(float distance);
     
     /**
-     * Gets the distance of the camera from the Model.
+     * Gets the distance of the camera from the Model in reltive terms with 1.0 being the optimal distance to show the full model.
      * @return 
      */
     float getCameraDistance();
